# tgwatch

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  guide.md
docs/specs/: 2026-06-06-tgwatch-design.md
src/tgwatch/: __init__.py  cli.py  watchdog.py
src/tgwatch/adapters/: __init__.py  aiogram.py  telethon.py
src/tgwatch/alert/: __init__.py  telegram.py
src/tgwatch/core/: __init__.py  models.py  recorder.py  storage.py
src/tgwatch/health/: __init__.py  telethon_health.py
tests/: conftest.py  test_adapters_aiogram.py  test_adapters_telethon.py  test_alert.py  test_cli.py  test_models.py  test_packaging.py  test_recorder.py  test_security.py  test_storage.py  test_telethon_health.py  test_watch.py  test_watchdog.py
