[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgwatch"
version = "0.1.0"
description = "Monitoring léger pour bots Telegram (aiogram) et comptes userbot (Telethon) — santé compte, alertes Telegram, zéro infra."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anis Hammouche", email = "anishammouche50@gmail.com" }]
keywords = ["telegram", "telethon", "aiogram", "monitoring", "userbot", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
telethon = ["telethon>=1.36"]
aiogram = ["aiogram>=3.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "build>=1.2",
]

[project.scripts]
tgwatch = "tgwatch.cli:main"

[project.urls]
Homepage = "https://github.com/assinscreedFC/tgwatch"
Repository = "https://github.com/assinscreedFC/tgwatch"

[tool.hatch.build.targets.wheel]
packages = ["src/tgwatch"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tgwatch",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=tgwatch --cov-report=term-missing"

[tool.coverage.report]
fail_under = 80
